--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ out/
 coverage/
 
 # Log files
-*.log
+# *.log
 logs
-*.log.*
+# *.log.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -44,9 +44,9 @@ ehtrace.etl
 *.vscodeignore
 
 # Log files
-*.log
+# *.log
 logs
-*.log.*
+# *.log.*
 
 # Temporary files
 *.tmp
