--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.1.0",
     "google-auth-library": "^9.15.1",
     "googleapis": "^149.0.0",
     "rss-parser": "^3.13.0"
